force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/ProductCatalog__mdt.object-meta.xml
<CustomObject>
    <description>Catalogo configuravel de tipos de produto exibidos no hub (PT, RN-12). Adicionar um registro aqui cria um novo cartao no hub sem deploy de LWC. Unico metadado novo de dominio desta capacidade.</description>
    <label>Catalogo de Produtos</label>
    <pluralLabel>Catalogo de Produtos</pluralLabel>
</CustomObject>