force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Ordem de exibicao do cartao no hub, crescente.</description>
    <inlineHelpText>Posicao do cartao na grade.</inlineHelpText>
    <label>Ordem de Exibicao</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>