force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/HoldingInformative__c.field-meta.xml
<CustomField>
    <fullName>HoldingInformative__c</fullName>
    <description>Indica vinculo Holding de visibilidade apenas informativa, sem selecao transacional (RN-06).</description>
    <inlineHelpText>Marcado para itens do bloco informativo Holding.</inlineHelpText>
    <label>Holding Informativo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>