force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <description>Nome do icone SLDS do cartao (ex.: utility:card_details).</description>
    <inlineHelpText>Icone SLDS do produto.</inlineHelpText>
    <label>Icone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>