force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Indica que o tipo de produto participa do hub. Desmarcar remove o cartao sem deploy.</description>
    <inlineHelpText>Marcado para produtos visiveis no hub.</inlineHelpText>
    <label>Ativo</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>