force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Rotulo de exibicao do cartao no hub (ex.: Cartao de Credito).</description>
    <inlineHelpText>Nome exibido no hub de produtos.</inlineHelpText>
    <label>Rotulo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>