force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Codigo do tipo de produto (ex.: CARTAO). Deve corresponder a Asset.ProductType__c.</description>
    <inlineHelpText>Codigo unico do tipo de produto.</inlineHelpText>
    <label>Tipo de Produto</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>