force-app/domains/busca-cliente/main/default/objects/ProductCatalog__mdt/fields/RequiresViaSelection__c.field-meta.xml
<CustomField>
    <fullName>RequiresViaSelection__c</fullName>
    <description>Indica que o produto exige sub-selecao de item especifico em modal (cartao, consorcio, investimentos). Conta digital nao exige (RN-07, RN-08).</description>
    <inlineHelpText>Marcado quando o produto abre modal de sub-selecao.</inlineHelpText>
    <label>Exige Sub-selecao</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>